<resources>
    <string name="app_name">Bluetooth Control for BBCAR</string>
    <string name="bluetooth_off">Bluetooth OFF</string>
    <string name="discover_new_devices">Discover New Devices</string>
    <string name="show_paired_devices">Show paired Devices</string>
    <string name="status">Status:</string>
    <string name="rx">RX:</string>
    <string name="bluetooth_status"><![CDATA[<Bluetooth Status>]]></string>
    <string name="bluetooth_on">Bluetooth ON</string>
    <string name="read_buffer"><![CDATA[<Read Buffer>]]></string>
    <string name="todo">TODO</string>
    <string name="lf">左前</string>
    <string name="forward">前進</string>
    <string name="rf">右前</string>
    <string name="left">左轉</string>
    <string name="car">車子</string>
    <string name="right">右轉</string>
    <string name="lb">左後</string>
    <string name="back">後退</string>
    <string name="rb">右後</string>
    <string name="version">Version</string>
    <string name="todo2">TODO</string>
</resources>
